--- a/src/input.css
+++ b/src/input.css
@@ -13,6 +13,9 @@
 }
 
 .custBg{
-  /* background-color: hsla(241, 72%, 46%, 1); */
-  background-image: linear-gradient(0deg, hsla(241, 72%, 46%, 1) 0%, hsla(256, 72%, 46%, 1) 74%);
+  background-image: linear-gradient(to bottom, hsl(252, 100%, 67%),hsl(241, 81%, 54%) );
+}
+
+.circleBg{
+  background-image: linear-gradient(to bottom, hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0) );
 }
